Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16046

Shared-file I/O performance is poor under group lock

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      LU-9964 fixed the crashes but made unlocks synchronous, as the result group unlock may take dozens of seconds. Precisely, the test is N ranks opening (+O_CREAT) the same file, taking a group lock, writing 1MB segments for a total of 128GB (each rank writes 128GB/rank count) at a stride of (1MB*rank count), fysnc() and group unlock. Timings are similar regardless of MPI barriers after each phase or no barriers.

      The ticket is to make group unlock asynchronous.

            vitaly_fertman Vitaly Fertman
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: